src/project-curd/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: project
          image: rility/k8s-web-proj:0.5
          volumeMounts:
          - name: shared-image
            mountPath: /app/images
