src/project-curd/manifests/curd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-curd-svc
spec:
  type: ClusterIP
  selector:
    app: project-curd
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
