src/project-curd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 23224
      protocol: TCP
      targetPort: 23224
