src/project-curd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pic
        pathType: Prefix
        backend:
          service:
            name: project-curd-svc
            port:
              number: 80
